fix: logo stretch

--- a/src/App.css
+++ b/src/App.css
@@ -398,6 +398,7 @@ table th {
   max-height: 45px;
   height: auto;
   display: flex;
+  margin-top: 18px;
 }
 
 .navList {
@@ -653,7 +654,7 @@ h4 {
     margin-top: -4px;
   }
   .mainLogo {
-    margin-top: -3px;
+    margin-top: 15px;
     width: 150px;
     margin-left: 1rem;
   }
